# $Id$

New in the November 2008 release
- Implementation
  + remove the pseudo PIR opcode 'addr'
  + add the 'box' opcode
- Compilers
  + PIRC
    - Integrated macro processing in PIRC's lexer
    - Integrated heredoc lexer in PIRC executable
    - Added preprocess and heredoc-preprocess commandline options
    - Integrated the PASM grammar into PIRC
    - Added a register allocator to optimize the built-in vanilla allocator
    - code cleanups and documentation
- Deprecations
    + PARROT_API has changed to PARROT_EXPORT
    + :lexid becomes :subid

New in 0.8.0
- Implementation
  + float precision expanded to 15 significant digits from 6
  + large integers autopromoted in PIR so as not to lose precision
  + improved precision of complex square root
  + exception handlers can register types of exceptions they catch
- Languages
  + Cardinal (Ruby)
    - implemented gather, take, and yield builtins
    - Range, Time, Math, GC, Kernel classes
    - many more tests
    - added a new committer
  + Markdown : new lightweight markup language
    - start implementation with PCT/NQP
  + partcl (Tcl 8.5.4)
    - Moved to its own repository: http://code.google.com/p/partcl/
  + Rakudo (Perl 6)
    - split() works with regexes
    - implemented Str.comb
    - ord() and chr() builtins
    - improved parsing of literal numbers
    - support for hyphens and dashes in identifiers
    - next() on for-loops
    - fixed floating point constant precision
    - improved namespace handling, closer to STD.pm model
    - support for exporting symbols
- Compilers
  + P6object
    - now generates classes in nested namespaces instead of :: names
    - supports class creation in caller's HLL namespace
  + PCT / PGE
    - now using true nested namespaces instead of :: names
    - cleaned up HLLCompiler interactive prompts and readline mode
    - updated to use typed exception handler registration
    - added initial support for loop control exceptions
  + PIRC