@@ -2,8 +2,10 @@
 
 New in the November 2008 release
 - Implementation
+  + CPAN module Storable 2.18 added as a configuration and build dependency
   + remove the pseudo PIR opcode 'addr'
   + add the 'box' opcode
+- Languages
 - Compilers
   + PIRC
     - Integrated macro processing in PIRC's lexer
